Updates from ShareLaTeX

--- a/DD/main.tex
+++ b/DD/main.tex
@@ -222,8 +222,23 @@ it allows to communicate with the application server and the only logic used is 
 
 %%completare questa sezione, magari con uno schema con relativa descrizione, basandosi sulla versione precedente
 
+\newpage
 
 \subsection{Component view}
+
+
+ 
+    
+    \begin{figure}[!htpb]
+        \centering
+        \includegraphics[width=\textwidth]{DD/images/CP.jpg}
+        \caption{Component diagram: presentation layer}
+    \end{figure}
+    \newpage
+
+
+
+
 
 \subsection{Deployment view}
 
