HOTFIX: missing requirement in matrix

--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -895,6 +895,10 @@
                 {\ref{Data4help must allow the Individual to see a list of the received requests from Third Parties.}}
                 {\ref{}}
                 {}
+            \con{\ref{The Individual should be able to accept or reject a request coming from a Third-Party.}}
+                {\ref{Data4help must allow the Individual to accept or reject a request from the list.}}
+                {\ref{}}
+                {}
             \con{\ref{The Individual shall be able connect an external device to the system.}}
                 {\ref{Data4help must allow the Individual to connect an external device through BT or NFC.}}
                 {\ref{}}
