--- a/DD/main.tex
+++ b/DD/main.tex
@@ -218,29 +218,75 @@ it allows to communicate with the application server and the only logic used is 
 \subsection{Selected architectural styles and patterns}
 
 \subsection{Other design decisions}
-
+\newpage
 \section{User Interface Design}
+
+%improve the image layout
+
+In this section will be showed the application mock ups.
+\newline
+The guest who access to the main page can sign-up to the application providing his credentials. Once clicked on the \textit{Sign On} button the guest can decide whether registers as an Individual or as a Third-Party, swiping left and right to choose the wright option.
+\newline
+Once registered, on initial page, an user can sign-in in the application inserting Username and Password in the relative boxes and clicking on the \textit{Sign} In button. 
+\newline  
+\newline  
+
+%mock-up figures
+
 
 \begin{figure}[!htpb]
     	\centering
     	\includegraphics[height=50mm]{images/mockups/Login_Registration.png}
     	\includegraphics[height=50mm]{images/mockups/RegistrationForm.png}
     	\includegraphics[height=50mm]{images/mockups/ThirdPartyRegistration.png}
+    	\newline
+    	\newline
         \end{figure}
-        \begin{figure}[!htpb]
+        
+ 
+
+When, inside the application, the user is redirected to the home page, where he can see the last activities, and where he can sign out from \textit{TrackMe}.
+\newline
+Swiping left he can access to the profile page which is different whether he is signed as an Individual or Third-Party. Here they can access to the services provided by \textit{Data4help} and the can enable \textit{Automated-SOS} too. The Individual can swipe again to access the \textit{Track4Run} section.
+
+        
+      
+\begin{figure}[!htpb]
     	\centering
     	\includegraphics[height=50mm]{images/mockups/HomePage.png}
     	\includegraphics[height=50mm]{images/mockups/IndividualProfile.png}
     	\includegraphics[height=50mm]{images/mockups/ThirdPartyProfile.png}
         \end{figure}
+
+\newpage
+
+The Third-party, in the Request page, can swipe between individual and group, and can enable the option to subscribe to new data. 
+\newline
+While, The Individual, can see and resolve incoming request, the accepted and the rejected ones.
+\newline
+The Third- Party, form the initial page, can also reach the view data section. Here he can see and plot the data of the accepted requests. Furthermore, swiping left and right, it can move between individual and group data.
+
+
+
         \begin{figure}[!htpb]
+
     	\centering
     	\includegraphics[height=50mm]{images/mockups/Requests.png}
     	\includegraphics[height=50mm]{images/mockups/GroupRequest.png}
     	\includegraphics[height=50mm]{images/mockups/ManageRequests.png}
     	\includegraphics[height=50mm]{images/mockups/ViewData.png}
     	\includegraphics[height=50mm]{images/mockups/ViewData2.png}
+    	\newline
         \end{figure}
+        
+\newpage
+        
+Once in the \textit{Truck4Run}, the individual can create, watch, enroll, unroll, start or delete a run. 
+\newline
+In the create run page, he can set all the characteristic of the run. Furthermore, he can access to an interactive map to set up the path of the rush.
+\newline
+In the section tho watch a run, a map is showed with all the information about that rush.
+
         \begin{figure}[!htpb]
     	\centering
     	\includegraphics[height=50mm]{images/mockups/RunManager.png}
@@ -248,6 +294,12 @@ it allows to communicate with the application server and the only logic used is 
     	\includegraphics[height=50mm]{images/mockups/ShowMap.png}
     	\includegraphics[height=50mm]{images/mockups/DefineTrack.png}
         \end{figure}
+        
+    
+
+
+
+        
 \section{Requirements Traceability}
 
 \section{Implementation, Integration and Test Plan}
