Updates from ShareLaTeX

--- a/DD/main.tex
+++ b/DD/main.tex
@@ -134,7 +134,7 @@ components of the applications
 deployed to have the application running correctly.
 
     \item Runtime view : sequence diagrams are represented in this section to
-show the course of the different tasks of our applicatio
+show the course of the different tasks of our application
 
     \item Component interfaces : the interfaces between the components are
 presented in this section
@@ -152,7 +152,7 @@ some algorithms. Pseudo code is used in order to hide unnecessary implementation
 details in order to focus on the most important parts.
 
 
-\item \textbf{User Interface Design}: this section presents mockups and user experience
+\item \textbf{User Interface Design}: this section presents mock ups and user experience
 explained via UX and BCE diagrams
 
 
@@ -178,10 +178,10 @@ The data server is separeted by the Application one.
 
 \subsection{Overview: High-level components and their interaction}
 
-The components that charcterise our system are:
+The components that characterise our system are:
 
 \begin{itemize}
-    \item \textbf{Application Server}: This tier comprises all the logic of the application system. This includes the main algorithms and the logic to intercat with external systems
+    \item \textbf{Application Server}: This tier comprises all the logic of the application system. This includes the main algorithms and the logic to interact with external systems
     
     \item \textbf{Mobile Application}: The presentation layer.
 it allows to communicate with the application server and the only logic used is the presentation one .
@@ -195,7 +195,7 @@ it allows to communicate with the application server and the only logic used is 
 
 \subsection{Component view}
 
-
+\subsubsection{Presentation layer}
  
     
     \begin{figure}[!htpb]
@@ -203,22 +203,39 @@ it allows to communicate with the application server and the only logic used is 
         \includegraphics[width=\textwidth]{DD/images/CP.jpg}
         \caption{Component diagram: presentation layer}
     \end{figure}
+    
     \newpage
 
+\subsubsection{logic layer}
 
+\newpage
 
+\subsubsection{Data layer}
 
+\newpage
 
 \subsection{Deployment view}
 
+
+\newpage
+
+
 \subsection{Runtime view}
+
+\newpage
 
 \subsection{Component interfaces}
 
+\newpage
+
 \subsection{Selected architectural styles and patterns}
 
-\subsection{Other design decisions}
 \newpage
+
+\subsection{Other design decisions}
+
+\newpage
+
 \section{User Interface Design}
 
 %improve the image layout
@@ -233,7 +250,6 @@ Once registered, on initial page, an user can sign-in in the application inserti
 
 %mock-up figures
 
-
 \begin{figure}[!htpb]
     	\centering
     	\includegraphics[height=50mm]{images/mockups/Login_Registration.png}
@@ -242,15 +258,11 @@ Once registered, on initial page, an user can sign-in in the application inserti
     	\newline
     	\newline
         \end{figure}
-        
  
-
 When, inside the application, the user is redirected to the home page, where he can see the last activities, and where he can sign out from \textit{TrackMe}.
 \newline
 Swiping left he can access to the profile page which is different whether he is signed as an Individual or Third-Party. Here they can access to the services provided by \textit{Data4help} and the can enable \textit{Automated-SOS} too. The Individual can swipe again to access the \textit{Track4Run} section.
 
-        
-      
 \begin{figure}[!htpb]
     	\centering
     	\includegraphics[height=50mm]{images/mockups/HomePage.png}
@@ -265,8 +277,6 @@ The Third-party, in the Request page, can swipe between individual and group, an
 While, The Individual, can see and resolve incoming request, the accepted and the rejected ones.
 \newline
 The Third- Party, form the initial page, can also reach the view data section. Here he can see and plot the data of the accepted requests. Furthermore, swiping left and right, it can move between individual and group data.
-
-
 
         \begin{figure}[!htpb]
 
@@ -294,16 +304,17 @@ In the section tho watch a run, a map is showed with all the information about t
     	\includegraphics[height=50mm]{images/mockups/ShowMap.png}
     	\includegraphics[height=50mm]{images/mockups/DefineTrack.png}
         \end{figure}
-        
-    
-
-
-
-        
+      
 \section{Requirements Traceability}
+
+
+\newpage
 
 \section{Implementation, Integration and Test Plan}
 
+\newpage
+
 \section{Effort Spent}
+
 
 \end{document}
